// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Token Compact Token 1`] = `
<section>
  

  <span
    class="fd-token fd-token--compact"
    role="button"
    tabindex="0"
  >
    
    
    <span
      class="fd-token__text"
    >
      
        Bibendum
    
    </span>
    
    
    <button
      aria-label="Bibendum token close"
      class="fd-token__close"
      tabindex="-1"
    />
    

  </span>
  

  <span
    class="fd-token fd-token--compact"
    role="button"
    tabindex="0"
  >
    
    
    <span
      class="fd-token__text"
    >
      
        Lorem
    
    </span>
    
    
    <button
      aria-label="Lorem token close"
      class="fd-token__close"
      tabindex="-1"
    />
    

  </span>
  

  <span
    class="fd-token fd-token--compact"
    role="button"
    tabindex="0"
  >
    
    
    <span
      class="fd-token__text"
    >
      
        Dolor
    
    </span>
    
    
    <button
      aria-label="Dolor token close"
      class="fd-token__close"
      tabindex="-1"
    />
    

  </span>
  

  <span
    class="fd-token fd-token--compact"
    role="button"
    tabindex="0"
  >
    
    
    <span
      class="fd-token__text"
    >
      
        Filter
    
    </span>
    
    
    <button
      aria-label="Filter token close"
      class="fd-token__close"
      tabindex="-1"
    />
    

  </span>
  

</section>
`;

exports[`Storyshots Components/Token Compact Tokenizer 1`] = `
<section>
  

  <div
    class="fd-tokenizer fd-tokenizer--compact"
  >
    
    
    <div
      class="fd-tokenizer__inner"
    >
      
        
      <span
        class="fd-token fd-token--compact"
        role="button"
        tabindex="0"
      >
        
            
        <span
          class="fd-token__text"
        >
          
                Bibendum
            
        </span>
        
            
        <button
          aria-label="Token close"
          class="fd-token__close"
          tabindex="-1"
        />
        
        
      </span>
      
        
      <span
        class="fd-token fd-token--compact"
        role="button"
        tabindex="0"
      >
        
            
        <span
          class="fd-token__text"
        >
          
                Lorem
            
        </span>
        
            
        <button
          aria-label="Token close"
          class="fd-token__close"
          tabindex="-1"
        />
        
        
      </span>
      
        
      <span
        class="fd-token fd-token--compact"
        role="button"
        tabindex="0"
      >
        
            
        <span
          class="fd-token__text"
        >
          
                Dolor
            
        </span>
        
            
        <button
          aria-label="Token close"
          class="fd-token__close"
          tabindex="-1"
        />
        
        
      </span>
      
        
      <span
        class="fd-token fd-token--compact"
        role="button"
        tabindex="0"
      >
        
            
        <span
          class="fd-token__text"
        >
          
                Filter
            
        </span>
        
            
        <button
          aria-label="Token close"
          class="fd-token__close"
          tabindex="-1"
        />
        
        
      </span>
      
        
      <span
        class="fd-token fd-token--readonly fd-token--compact"
      >
        
            
        <span
          class="fd-token__text"
        >
          
                Lorem
            
        </span>
        
        
      </span>
      
        
      <input
        aria-label="Tokenizer input"
        class="fd-input fd-input--compact fd-tokenizer__input"
      />
      
    
    </div>
    

  </div>
  

  <br />
  <br />
  

  <div
    class="fd-tokenizer fd-tokenizer--compact is-focus"
  >
    
    
    <div
      class="fd-tokenizer__inner"
    >
      
        
      <span
        class="fd-token fd-token--compact"
        role="button"
        tabindex="0"
      >
        
            
        <span
          class="fd-token__text"
        >
          
                Bibendum
            
        </span>
        
            
        <button
          aria-label="Token close"
          class="fd-token__close"
          tabindex="-1"
        />
        
        
      </span>
      
        
      <span
        class="fd-token fd-token--compact"
        role="button"
        tabindex="0"
      >
        
            
        <span
          class="fd-token__text"
        >
          
                Lorem
            
        </span>
        
            
        <button
          aria-label="Token close"
          class="fd-token__close"
          tabindex="-1"
        />
        
        
      </span>
      
        
      <span
        class="fd-token fd-token--compact"
        role="button"
        tabindex="0"
      >
        
            
        <span
          class="fd-token__text"
        >
          
                Dolor
            
        </span>
        
            
        <button
          aria-label="Token close"
          class="fd-token__close"
          tabindex="-1"
        />
        
        
      </span>
      
        
      <span
        class="fd-token fd-token--compact"
        role="button"
        tabindex="0"
      >
        
            
        <span
          class="fd-token__text"
        >
          
                Filter
            
        </span>
        
            
        <button
          aria-label="Token close"
          class="fd-token__close"
          tabindex="-1"
        />
        
        
      </span>
      
        
      <span
        class="fd-token fd-token--readonly fd-token--compact"
      >
        
            
        <span
          class="fd-token__text"
        >
          
                Lorem
            
        </span>
        
        
      </span>
      
        
      <input
        aria-label="Tokenizer input"
        class="fd-input fd-input--compact fd-tokenizer__input"
      />
      
    
    </div>
    

  </div>
  

</section>
`;

exports[`Storyshots Components/Token Cozy Tokenizer 1`] = `
<section>
  

  <div
    class="fd-tokenizer "
  >
    
    
    <div
      class="fd-tokenizer__inner"
    >
      
        
      <span
        class="fd-token"
        role="button"
        tabindex="0"
      >
        
            
        <span
          class="fd-token__text"
        >
          
                Bibendum
            
        </span>
        
            
        <button
          aria-label="Token close"
          class="fd-token__close"
          tabindex="-1"
        />
        
        
      </span>
      
        
      <span
        class="fd-token"
        role="button"
        tabindex="0"
      >
        
            
        <span
          class="fd-token__text"
        >
          
                Lorem
            
        </span>
        
            
        <button
          aria-label="Token close"
          class="fd-token__close"
          tabindex="-1"
        />
        
        
      </span>
      
        
      <span
        class="fd-token"
        role="button"
        tabindex="0"
      >
        
            
        <span
          class="fd-token__text"
        >
          
                Dolor
            
        </span>
        
            
        <button
          aria-label="Token close"
          class="fd-token__close"
          tabindex="-1"
        />
        
        
      </span>
      
        
      <span
        class="fd-token"
        role="button"
        tabindex="0"
      >
        
            
        <span
          class="fd-token__text"
        >
          
                Filter
            
        </span>
        
            
        <button
          aria-label="Token close"
          class="fd-token__close"
          tabindex="-1"
        />
        
        
      </span>
      
        
      <span
        class="fd-token fd-token--readonly"
      >
        
            
        <span
          class="fd-token__text"
        >
          
                Lorem
            
        </span>
        
        
      </span>
      
        
      <input
        aria-label="Tokenizer input"
        class="fd-input fd-tokenizer__input"
      />
      
    
    </div>
    

  </div>
  

  <br />
  <br />
  

  <div
    class="fd-tokenizer is-focus"
  >
    
    
    <div
      class="fd-tokenizer__inner"
    >
      
        
      <span
        class="fd-token"
        role="button"
        tabindex="0"
      >
        
            
        <span
          class="fd-token__text"
        >
          
                Bibendum
            
        </span>
        
            
        <button
          aria-label="Token close"
          class="fd-token__close"
          tabindex="-1"
        />
        
        
      </span>
      
        
      <span
        class="fd-token"
        role="button"
        tabindex="0"
      >
        
            
        <span
          class="fd-token__text"
        >
          
                Lorem
            
        </span>
        
            
        <button
          aria-label="Token close"
          class="fd-token__close"
          tabindex="-1"
        />
        
        
      </span>
      
        
      <span
        class="fd-token"
        role="button"
        tabindex="0"
      >
        
            
        <span
          class="fd-token__text"
        >
          
                Dolor
            
        </span>
        
            
        <button
          aria-label="Token close"
          class="fd-token__close"
          tabindex="-1"
        />
        
        
      </span>
      
        
      <span
        class="fd-token"
        role="button"
        tabindex="0"
      >
        
            
        <span
          class="fd-token__text"
        >
          
                Filter
            
        </span>
        
            
        <button
          aria-label="Token close"
          class="fd-token__close"
          tabindex="-1"
        />
        
        
      </span>
      
        
      <span
        class="fd-token fd-token--readonly"
      >
        
            
        <span
          class="fd-token__text"
        >
          
                Lorem
            
        </span>
        
        
      </span>
      
        
      <input
        aria-label="Tokenizer input"
        class="fd-input fd-tokenizer__input"
      />
      
    
    </div>
    

  </div>
  

</section>
`;

exports[`Storyshots Components/Token Primary 1`] = `
<section>
  

  <span
    class="fd-token"
    role="button"
    tabindex="0"
  >
    
    
    <span
      class="fd-token__text"
    >
      
        Bibendum
    
    </span>
    
    
    <button
      aria-label="Bibendum token close"
      class="fd-token__close"
      tabindex="-1"
    />
    

  </span>
  

  <span
    class="fd-token"
    role="button"
    tabindex="0"
  >
    
    
    <span
      class="fd-token__text"
    >
      
        Lorem
    
    </span>
    
    
    <button
      aria-label="Lorem token close"
      class="fd-token__close"
      tabindex="-1"
    />
    

  </span>
  

  <span
    class="fd-token"
    role="button"
    tabindex="0"
  >
    
    
    <span
      class="fd-token__text"
    >
      
        Dolor
    
    </span>
    
    
    <button
      aria-label="Dolor token close"
      class="fd-token__close"
      tabindex="-1"
    />
    

  </span>
  

  <span
    class="fd-token"
    role="button"
    tabindex="0"
  >
    
    
    <span
      class="fd-token__text"
    >
      
        Filter
    
    </span>
    
    
    <button
      aria-label="Filter token close"
      class="fd-token__close"
      tabindex="-1"
    />
    

  </span>
  

</section>
`;

exports[`Storyshots Components/Token Read Only Token 1`] = `
<section>
  

  <span
    class="fd-token fd-token--readonly"
    role="button"
    tabindex="0"
  >
    
    
    <span
      class="fd-token__text"
    >
      
        Bibendum
    
    </span>
    

  </span>
  

  <span
    class="fd-token fd-token--readonly"
    role="button"
    tabindex="0"
  >
    
    
    <span
      class="fd-token__text"
    >
      
        Lorem
    
    </span>
    

  </span>
  

  <span
    class="fd-token fd-token--readonly"
    role="button"
    tabindex="0"
  >
    
    
    <span
      class="fd-token__text"
    >
      
        Dolor
    
    </span>
    

  </span>
  

  <span
    class="fd-token fd-token--readonly"
    role="button"
    tabindex="0"
  >
    
    
    <span
      class="fd-token__text"
    >
      
        Filter
    
    </span>
    

  </span>
  

</section>
`;

exports[`Storyshots Components/Token Scrollable Tokenizer 1`] = `


`;

exports[`Storyshots Components/Token Selected 1`] = `
<section>
  

  <span
    class="fd-token fd-token--selected"
    role="button"
    tabindex="0"
  >
    
    
    <span
      class="fd-token__text"
    >
      
        Bibendum
    
    </span>
    
    
    <button
      aria-label="Bibendum token close"
      class="fd-token__close"
      tabindex="-1"
    />
    

  </span>
  

  <span
    class="fd-token fd-token--selected"
    role="button"
    tabindex="0"
  >
    
    
    <span
      class="fd-token__text"
    >
      
        Lorem
    
    </span>
    
    
    <button
      aria-label="Lorem token close"
      class="fd-token__close"
      tabindex="-1"
    />
    

  </span>
  

  <span
    class="fd-token fd-token--selected"
    role="button"
    tabindex="0"
  >
    
    
    <span
      class="fd-token__text"
    >
      
        Dolor
    
    </span>
    
    
    <button
      aria-label="Dolor token close"
      class="fd-token__close"
      tabindex="-1"
    />
    

  </span>
  

  <span
    class="fd-token fd-token--selected"
    role="button"
    tabindex="0"
  >
    
    
    <span
      class="fd-token__text"
    >
      
        Filter
    
    </span>
    
    
    <button
      aria-label="Filter token close"
      class="fd-token__close"
      tabindex="-1"
    />
    

  </span>
  

</section>
`;
